app/src/main/java/com/example/e_commerce/ui/theme/Color.kt
package com.example.e_commerce.ui.theme

import androidx.compose.ui.graphics.Color

// --- Backdrop layers ---
// Deep cosmos background. Dark-first by design so neon accents pop.
val BgDeep = Color(0xFF05071A)
val BgElevated = Color(0xFF0E1230)
val BgCard = Color(0xFF151A38)
val BgOverlay = Color(0xCC0B0E20)

// --- Neon accents ---
val NeonIndigo = Color(0xFF7C3AED)   // primary electric purple
val NeonPurple = Color(0xFFA855F7)
val NeonCyan = Color(0xFF22D3EE)     // secondary
val NeonLime = Color(0xFFA3E635)     // success / accent
val NeonPink = Color(0xFFEC4899)     // highlight
val NeonAmber = Color(0xFFFFAE00)    // streak / fire
val NeonRose = Color(0xFFF43F5E)     // error

// --- Text ---
val TextPrimary = Color(0xFFE8E9F3)
val TextSecondary = Color(0xFFA5A8BD)
val TextTertiary = Color(0xFF64677C)

// --- Subtle lines ---
val StrokeSubtle = Color(0x1FFFFFFF)
val StrokeEmphasis = Color(0x3DFFFFFF)

// --- Light-theme fallbacks (for users with light system setting) ---
val LightBg = Color(0xFFF6F7FB)
val LightSurface = Color(0xFFFFFFFF)
val LightOnSurface = Color(0xFF0F1025)